syntax = "proto3";

package objectstore;

import "google/protobuf/timestamp.proto";

message UUID {
  string value = 1;
}

message AuditFields {
  google.protobuf.Timestamp created_date = 1;
  string created_by = 2;
  google.protobuf.Timestamp updated_date = 3;
  string updated_by = 4;
  int32 version = 5;
  string message = 6;
}

message PublicKey {
  oneof key {
    bytes secp256k1 = 1;
  }
}
